--- a/css/style.css
+++ b/css/style.css
@@ -482,6 +482,50 @@ p {
   transform: translateX(0px);
 }
 
+/**CORAZÓN**/
+.cardcontainer{
+  width: 100%;
+  max-width: 1200px;
+  height: 430px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: auto;
+}
+.cardcontainer .card{
+  width: 330px;
+  height: 430px;
+  border-radius: 8px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  margin: 20px;
+  text-align: center;
+  transition: all 0.25s;
+}
+.cardcontainer .card:hover{
+  transform: translateY(-15px);
+  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+.cardcontainer .card img{
+  width: 220px;
+  height: 220px;
+}
+.cardcontainer .card h4{
+  font-weight: 600;
+}
+.cardcontainer .card p{
+  padding: 0 1rem;
+  font-size: 16px;
+  font-weight: 300;
+}
+.cardcontainer .card a{
+  font-weight: 500;
+  text-decoration: none;
+  color: #3498db;
+}
+/**Fin de corazón**/
+
+
 #fh5co-portfolio,
 #fh5co-about,
 #fh5co-contact,
