--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,31 @@ body {
   color: #7a7e89;
   background: #f7f7f7;
 }
+
+.whatsapp {
+  position: fixed;
+  display: block;
+  width:80px;
+  height:80px;
+  bottom:50px;
+  right:40px;
+  color:#FFF;
+  border-radius:40px;
+  text-align:center;
+  font-size:40px;
+  z-index:100;
+}
+
+.whatsapp-icon {
+  margin-top:13px;
+}
+
+.whatsapp-icon {
+  display: flex;
+  font-size: 30px;
+  color: #25d366;
+}
+
 body.fh5co-overflow {
   overflow-x: auto;
 }
