--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body {
   background: #f7f7f7;
 }
 
+.texto-comunion{
+  padding: 5%;
+}
+
 .whatsapp {
   position: fixed;
   display: block;
@@ -40,6 +44,7 @@ body {
   display: flex;
   font-size: 30px;
   color: #25d366;
+
 }
 
 body.fh5co-overflow {
@@ -382,7 +387,7 @@ p {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
+  display: inline;
   border: 7px solid #fff;
   padding: 30px 50px;
   -webkit-transition: 0.3s;
@@ -918,7 +923,7 @@ p {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
+  display: inline;
   width: 25px;
   height: 3px;
   color: #535659;
@@ -1076,6 +1081,242 @@ video{
   width: 60%;
   margin: auto;
   display: block;
+}
+
+/* Tienda */
+
+.menu-btn{
+  color: #424144;
+  font-size: 23px;
+  cursor: pointer;
+  display: none;
+}
+
+.navbar{
+  padding: 20px 5%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  background-color: #f3f4f6;
+  box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
+}
+.navbar .logo h1{
+  color: #424144;
+  /*border-bottom: 4px solid#fd6561;*/
+}
+
+.navbar .menu li{
+  list-style: none;
+  display: inline-block;
+}
+
+.navbar .menu li a{
+  display: block;
+  margin-left: 20px;
+  color: #424144;
+  border-bottom: 4px solid transparent;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+/*.navbar .menu li .active{
+  border-bottom: 4px solid #f63e4e;
+}*/
+
+.navbar .menu li a i{
+  color: #f63e4e;
+}
+
+.navbar .menu li a:hover{
+  border-bottom: 4px solid #f63e4e;
+}
+
+/* Content */
+
+.content{
+  background-image: url(./Images/mujer\ cuadro.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 0 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  color: #424144;
+  height: 100vh;
+}
+
+.content h1{
+  font-size: 40px;
+}
+
+.content p{
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+.content button{
+  margin-top: 30px;
+  padding: 15px 30px;
+  border: none;
+  background: #0f8829;
+  color: white;
+  font-size: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.pheading{
+  text-align: center;
+  margin: 25px 0;
+  color: #424144;
+}
+
+/* Products */
+
+.sec{
+  padding: 10px 5%;
+}
+
+.products{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+}
+
+.products .card{
+  width: 310px;
+  background: #f5f5f5;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  padding: 5px;
+  margin-bottom: 20px;
+}
+
+.products .card img{
+  height: 250px;
+  width: 100%;
+}
+
+.products .card .desc{
+  padding: 5px 20px;
+  opacity: 0.8;
+}
+
+.products .card .title{
+  font-weight: 700;
+  font-size: 20px;
+  color: #424144;
+  padding: 0 10px;
+}
+
+.products .card .box{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.products .card .box .price{
+  color: #424144;
+  font-size: 16px;
+  font-weight: bold;
+  align-items: center;
+}
+.products .card .box .price p{
+  color: #0f8829;
+  font-size: 17px;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.products .card .box .btn-wa{
+  font-size: 13px;
+  color: #686364;
+  padding: 14px 12px;
+  font-weight: 900;
+  border: 1px solid #686364;
+  border-radius: 20px;
+}
+
+.whatsapp-icon-tienda{
+  display: flex;
+  font-size: 20px;
+  color: #25d366;
+}
+
+.products .card .box .btn-wa:hover{
+  cursor: pointer;
+  /* background-color: #f63e4e; */
+  color: white;
+}
+
+/* Footer */
+
+footer{
+  background-color: #f3f4f6;
+  height: 10vh;
+}
+
+footer p{
+  text-align: center;
+  line-height: 10vh;
+}
+
+footer p a{
+  text-decoration: none;
+  color: #424144;
+  font-weight: bold;
+}
+
+.description p{
+  display: block;
+  text-align: center;
+  padding: 20px;
+}
+
+
+/* Responsive */
+
+@media (max-width: 820px){
+  .menu-btn{
+      display: block;
+      z-index: 999;
+  }
+
+  .menu-btn i.active::before{
+      content: "\f00d";
+  }
+
+  .navbar .menu{
+      position: fixed;
+      height: 100vh;
+      width: 100%;
+      left: -100%;
+      top: 0;
+      background-color: #f3f4f6;
+      text-align: center;
+      padding-top: 80px;
+      transition: all 0.3s ease;
+  }
+
+  .navbar .menu.active{
+      left: 0;
+  }
+
+  .navbar .menu li{
+      display: flex;
+      justify-content: center;
+  }
+  
+
+  .navbar .menu li a{
+      margin: 10px 0;
+      font-size: 25px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
