--- a/css/style.css
+++ b/css/style.css
@@ -537,8 +537,8 @@ p {
   margin: auto;
 }
 .cardcontainer .card{
-  width: 230px;
-  height: 330px;
+  width: 330px;
+  height: 310px;
   border-radius: 8px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   overflow: hidden;
@@ -551,8 +551,9 @@ p {
   box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 }
 .cardcontainer .card img{
-  width: 120px;
-  height: 120px;
+  width: 230px;
+  height: 160px;
+  padding: 2px;
 }
 .cardcontainer .card h4{
   font-weight: 600;
@@ -1196,7 +1197,7 @@ video{
   margin-bottom: 20px;
 }
 
-.products .card img{
+.products .card .img{
   height: 250px;
   width: 100%;
 }
